little_duckParser.py
# Generated from little_duck.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class little_duckParser ( Parser ):

    grammarFileName = "little_duck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'vars'", "'inicio'", "'fin'", 
                     "'entero'", "'flotante'", "'escribe'", "'mientras'", 
                     "'haz'", "'si'", "'sino'", "'func'", "'='", "';'", 
                     "':'", "','", "'('", "')'", "'{'", "'}'", "'+'", "'-'", 
                     "'*'", "'/'", "'>'", "'<'", "'!='", "'=='" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA", "VARS", "INICIO", "FIN", 
                      "ENTERO", "FLOTANTE", "ESCRIBE", "MIENTRAS", "HAZ", 
                      "SI", "SINO", "FUNC", "ASSIGN", "SEMI", "COLON", "COMMA", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "PLUS", "MINUS", 
                      "MULT", "DIV", "GT", "LT", "NEQ", "EQ", "ID", "CTE_ENT", 
                      "CTE_FLOT", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_vars = 1
    RULE_var_decl_list = 2
    RULE_var_decl = 3
    RULE_id_list = 4
    RULE_tipo = 5
    RULE_funcs = 6
    RULE_func_decl = 7
    RULE_param_list = 8
    RULE_param = 9
    RULE_cuerpo = 10
    RULE_estatuto = 11
    RULE_asigna = 12
    RULE_imprime = 13
    RULE_exp_list = 14
    RULE_ciclo = 15
    RULE_condicion = 16
    RULE_condicion_else = 17
    RULE_llamada = 18
    RULE_arg_list = 19
    RULE_expresion = 20
    RULE_op_comparacion = 21
    RULE_exp = 22
    RULE_termino = 23
    RULE_factor = 24
    RULE_cte = 25

    ruleNames =  [ "programa", "vars", "var_decl_list", "var_decl", "id_list", 
                   "tipo", "funcs", "func_decl", "param_list", "param", 
                   "cuerpo", "estatuto", "asigna", "imprime", "exp_list", 
                   "ciclo", "condicion", "condicion_else", "llamada", "arg_list", 
                   "expresion", "op_comparacion", "exp", "termino", "factor", 
                   "cte" ]

    EOF = Token.EOF
    PROGRAMA=1
    VARS=2
    INICIO=3
    FIN=4
    ENTERO=5
    FLOTANTE=6
    ESCRIBE=7
    MIENTRAS=8
    HAZ=9
    SI=10
    SINO=11
    FUNC=12
    ASSIGN=13
    SEMI=14
    COLON=15
    COMMA=16
    LPAREN=17
    RPAREN=18
    LBRACE=19
    RBRACE=20
    PLUS=21
    MINUS=22
    MULT=23
    DIV=24
    GT=25
    LT=26
    NEQ=27
    EQ=28
    ID=29
    CTE_ENT=30
    CTE_FLOT=31
    WS=32
    COMMENT=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(little_duckParser.PROGRAMA, 0)

        def ID(self):
            return self.getToken(little_duckParser.ID, 0)

        def SEMI(self):
            return self.getToken(little_duckParser.SEMI, 0)

        def vars_(self):
            return self.getTypedRuleContext(little_duckParser.VarsContext,0)


        def funcs(self):
            return self.getTypedRuleContext(little_duckParser.FuncsContext,0)


        def INICIO(self):
            return self.getToken(little_duckParser.INICIO, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(little_duckParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(little_duckParser.FIN, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = little_duckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(little_duckParser.PROGRAMA)
            self.state = 53
            self.match(little_duckParser.ID)
            self.state = 54
            self.match(little_duckParser.SEMI)
            self.state = 55
            self.vars_()
            self.state = 56
            self.funcs()
            self.state = 57
            self.match(little_duckParser.INICIO)
            self.state = 58
            self.cuerpo()
            self.state = 59
            self.match(little_duckParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(little_duckParser.VARS, 0)

        def LBRACE(self):
            return self.getToken(little_duckParser.LBRACE, 0)

        def var_decl_list(self):
            return self.getTypedRuleContext(little_duckParser.Var_decl_listContext,0)


        def RBRACE(self):
            return self.getToken(little_duckParser.RBRACE, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = little_duckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(little_duckParser.VARS)
                self.state = 62
                self.match(little_duckParser.LBRACE)
                self.state = 63
                self.var_decl_list()
                self.state = 64
                self.match(little_duckParser.RBRACE)
                pass
            elif token in [3, 12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(little_duckParser.Var_declContext)
            else:
                return self.getTypedRuleContext(little_duckParser.Var_declContext,i)


        def getRuleIndex(self):
            return little_duckParser.RULE_var_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl_list" ):
                listener.enterVar_decl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl_list" ):
                listener.exitVar_decl_list(self)




    def var_decl_list(self):

        localctx = little_duckParser.Var_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self.var_decl()
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==29):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(little_duckParser.Id_listContext,0)


        def COLON(self):
            return self.getToken(little_duckParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(little_duckParser.TipoContext,0)


        def SEMI(self):
            return self.getToken(little_duckParser.SEMI, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = little_duckParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.id_list()
            self.state = 75
            self.match(little_duckParser.COLON)
            self.state = 76
            self.tipo()
            self.state = 77
            self.match(little_duckParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(little_duckParser.ID)
            else:
                return self.getToken(little_duckParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(little_duckParser.COMMA)
            else:
                return self.getToken(little_duckParser.COMMA, i)

        def getRuleIndex(self):
            return little_duckParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)




    def id_list(self):

        localctx = little_duckParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(little_duckParser.ID)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 80
                self.match(little_duckParser.COMMA)
                self.state = 81
                self.match(little_duckParser.ID)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(little_duckParser.ENTERO, 0)

        def FLOTANTE(self):
            return self.getToken(little_duckParser.FLOTANTE, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = little_duckParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(little_duckParser.Func_declContext,0)


        def funcs(self):
            return self.getTypedRuleContext(little_duckParser.FuncsContext,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = little_duckParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcs)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.func_decl()
                self.state = 90
                self.funcs()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(little_duckParser.FUNC, 0)

        def ID(self):
            return self.getToken(little_duckParser.ID, 0)

        def LPAREN(self):
            return self.getToken(little_duckParser.LPAREN, 0)

        def param_list(self):
            return self.getTypedRuleContext(little_duckParser.Param_listContext,0)


        def RPAREN(self):
            return self.getToken(little_duckParser.RPAREN, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(little_duckParser.CuerpoContext,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = little_duckParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(little_duckParser.FUNC)
            self.state = 96
            self.match(little_duckParser.ID)
            self.state = 97
            self.match(little_duckParser.LPAREN)
            self.state = 98
            self.param_list()
            self.state = 99
            self.match(little_duckParser.RPAREN)
            self.state = 100
            self.cuerpo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(little_duckParser.ParamContext)
            else:
                return self.getTypedRuleContext(little_duckParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(little_duckParser.COMMA)
            else:
                return self.getToken(little_duckParser.COMMA, i)

        def getRuleIndex(self):
            return little_duckParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = little_duckParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.param()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 103
                    self.match(little_duckParser.COMMA)
                    self.state = 104
                    self.param()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(little_duckParser.ID, 0)

        def COLON(self):
            return self.getToken(little_duckParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(little_duckParser.TipoContext,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = little_duckParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(little_duckParser.ID)
            self.state = 114
            self.match(little_duckParser.COLON)
            self.state = 115
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(little_duckParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(little_duckParser.RBRACE, 0)

        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(little_duckParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(little_duckParser.EstatutoContext,i)


        def getRuleIndex(self):
            return little_duckParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)




    def cuerpo(self):

        localctx = little_duckParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cuerpo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(little_duckParser.LBRACE)
            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 118
                self.estatuto()
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 536872320) != 0)):
                    break

            self.state = 123
            self.match(little_duckParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asigna(self):
            return self.getTypedRuleContext(little_duckParser.AsignaContext,0)


        def imprime(self):
            return self.getTypedRuleContext(little_duckParser.ImprimeContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(little_duckParser.CicloContext,0)


        def condicion(self):
            return self.getTypedRuleContext(little_duckParser.CondicionContext,0)


        def llamada(self):
            return self.getTypedRuleContext(little_duckParser.LlamadaContext,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = little_duckParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_estatuto)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.asigna()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.imprime()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.ciclo()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.condicion()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.llamada()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(little_duckParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(little_duckParser.ASSIGN, 0)

        def expresion(self):
            return self.getTypedRuleContext(little_duckParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(little_duckParser.SEMI, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_asigna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsigna" ):
                listener.enterAsigna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsigna" ):
                listener.exitAsigna(self)




    def asigna(self):

        localctx = little_duckParser.AsignaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_asigna)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(little_duckParser.ID)
            self.state = 133
            self.match(little_duckParser.ASSIGN)
            self.state = 134
            self.expresion()
            self.state = 135
            self.match(little_duckParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCRIBE(self):
            return self.getToken(little_duckParser.ESCRIBE, 0)

        def LPAREN(self):
            return self.getToken(little_duckParser.LPAREN, 0)

        def exp_list(self):
            return self.getTypedRuleContext(little_duckParser.Exp_listContext,0)


        def RPAREN(self):
            return self.getToken(little_duckParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(little_duckParser.SEMI, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_imprime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprime" ):
                listener.enterImprime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprime" ):
                listener.exitImprime(self)




    def imprime(self):

        localctx = little_duckParser.ImprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_imprime)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(little_duckParser.ESCRIBE)
            self.state = 138
            self.match(little_duckParser.LPAREN)
            self.state = 139
            self.exp_list()
            self.state = 140
            self.match(little_duckParser.RPAREN)
            self.state = 141
            self.match(little_duckParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(little_duckParser.ExpContext)
            else:
                return self.getTypedRuleContext(little_duckParser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(little_duckParser.COMMA)
            else:
                return self.getToken(little_duckParser.COMMA, i)

        def getRuleIndex(self):
            return little_duckParser.RULE_exp_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_list" ):
                listener.enterExp_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_list" ):
                listener.exitExp_list(self)




    def exp_list(self):

        localctx = little_duckParser.Exp_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exp_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.exp()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 144
                self.match(little_duckParser.COMMA)
                self.state = 145
                self.exp()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(little_duckParser.MIENTRAS, 0)

        def LPAREN(self):
            return self.getToken(little_duckParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(little_duckParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(little_duckParser.RPAREN, 0)

        def HAZ(self):
            return self.getToken(little_duckParser.HAZ, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(little_duckParser.CuerpoContext,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)




    def ciclo(self):

        localctx = little_duckParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_ciclo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(little_duckParser.MIENTRAS)
            self.state = 152
            self.match(little_duckParser.LPAREN)
            self.state = 153
            self.expresion()
            self.state = 154
            self.match(little_duckParser.RPAREN)
            self.state = 155
            self.match(little_duckParser.HAZ)
            self.state = 156
            self.cuerpo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(little_duckParser.SI, 0)

        def LPAREN(self):
            return self.getToken(little_duckParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(little_duckParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(little_duckParser.RPAREN, 0)

        def HAZ(self):
            return self.getToken(little_duckParser.HAZ, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(little_duckParser.CuerpoContext,0)


        def condicion_else(self):
            return self.getTypedRuleContext(little_duckParser.Condicion_elseContext,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):
